discussion/kv_engine/142092/142092_rev4_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-39620: Store the TLS properties in the NIM [2.1/3]

Move the TLS properties from the Settings class over to the
network interface manager.

Change-Id: If49a35e0be061fa50f2da67c01f7af74248559ca

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2020-12-21 10:57:56.000000000
Message: 
Uploaded patch set 4.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-12-21 11:25:55.000000000
Message: 
Patch Set 4: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/32672/ : FAILURE

Compile error at ..\kv_engine\daemon\server_socket.cc(23): error C2059: syntax error: "<<" ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/32672/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/28155/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/daemon/server_socket.cc:23:1:
error: version control conflict marker in file
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/28155/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/6358/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/daemon/server_socket.cc:23:1: error: version control conflict marker in file [clang-diagnostic-error]
<<<<<<< HEAD
^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/daemon/server_socket.cc:181:19: error: use of undeclared identifier "networkInterfaceManager" [clang-diagnostic-error]
            ssl = networkInterfaceManager->createClientSslHandle();
                  ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/6358/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/daemon/server_socket.cc:23:1:
error: version control conflict marker in file [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/6358/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/7958/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/8235/ : FAILURE

Compile error at [2020-12-21T11:21:53.887Z] ../kv_engine/daemon/server_socket.cc:23:1:
error: version control conflict marker in file
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/8235/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/7841/ : FAILURE

Compile error at [2020-12-21T11:15:04.423Z] ../kv_engine/daemon/server_socket.cc:23:1:
error: version control conflict marker in file
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/7841/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/6920/ : FAILURE

Compile error at [2020-12-21T11:04:30.442Z] ../kv_engine/daemon/server_socket.cc:23:1:
error: version control conflict marker in file
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/6920/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/15778/ : FAILURE

Compile error at [2020-12-21T11:16:42.113Z] ../kv_engine/daemon/server_socket.cc:23:1:
error: version control conflict marker in file
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/15778/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/4893/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
